fix downArrow on Safari

--- a/src/scss-dev/custom.scss
+++ b/src/scss-dev/custom.scss
@@ -49,7 +49,7 @@
     z-index: 100;
     left: 50%;
     margin-left: -10.28px;
-    bottom: 15px;
+    bottom: 50px;
     color: #fff;
     opacity: 0;
     animation-name: down;
